# AutoScheduler

./: .gitignore  README.md  Task.py  build.zig  build.zig.zon  environment.yml  intervaltree.py  intervaltree.zig  intervaltree_tests.py  logic.py  main.py  pyproject.toml  requirements.txt  schedule.py  task.py  test.py  timeslot.py
