[project]
name = "autoscheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "numpy>=2.4.6",
]

[tool.fastapi]
entrypoint = "main:app"

[dependency-groups]
dev = [
    "basedpyright>=1.39.6",
    "ruff>=0.15.15",
]
